--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+		<div>
+    		<h2>My Repo</h2>
+    		<p>This is my practice file for GitHub GUI and gh-pages.</p>
+		</div>
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
 
