--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <![endif]-->
 		<div>
     		<h2>My Repo</h2>
-    		<p>This is my practice file for GitHub GUI and gh-pages.</p>
+    		<p>This is my practice file for GitHub GUI and <a href="http://stephskaggs.github.io/gitGUI" title="link to gh-pages">gh-pages<a>.</p>
 		</div>
+
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
 
