--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <![endif]-->
 		<div>
     		<h2>My Repo</h2>
+
+    		<p>This is my practice file for GitHub GUI and <a href="http://stephskaggs.github.io/gitGUI" title="Link to my first gh-something">My MakerSquare JS Exercises<a>.</p>
+
     		<p>This is my practice file for GitHub GUI and <a href="http://stephskaggs.github.io/gitGUI" title="link to gh-pages">gh-pages<a>My makersquare js test.</p>
+ js-test
 		</div>
 
         <!-- Add your site or application content here -->
